# CS479_Project

./: .gitignore  CMakeLists.txt  setup.py
default_controller_demo/: CMakeLists.txt
default_controller_demo/module/controller/: CMakeLists.txt
default_controller_demo/module/controller/common/: RaiboPositionController.hpp  RaiboPositionController_2.hpp  neuralNet.hpp  raibotController.hpp
default_controller_demo/module/controller/raibot_default_controller/: raibot_default_controller.cpp  raibot_default_controller.hpp
default_controller_demo/module/controller/raibot_default_controller/network/network_100000/: obs_mean.csv
default_controller_demo/module/controller/raibot_position_controller_sim/: raibot_position_controller_sim.hpp
default_controller_demo/module/controller/raibot_position_controller_sim/network/network_100000/: mean20000.csv  var20000.csv
default_controller_demo/module/controller/raibot_position_controller_sim_2/: raibot_position_controller_sim_2.hpp
default_controller_demo/rsc/raibot/urdf/: raibot_simplified_manipulator.urdf
default_controller_demo/src/: CMakeCache.txt  Makefile
default_controller_demo/src/install/: local_setup.sh  setup.sh
default_controller_demo/src/module/controller/: Makefile
examples/: CMakeLists.txt  Makefile  cmake_install.cmake  install_manifest.txt
examples/examples/: Makefile  anymal_stress_test  anymals  atlas  balls  cartPole  cmake_install.cmake  compound  heightMapUsingPng  heightmap  kinematicObject  kinova  laikago  materialStaticFriction  materials  meshes  mjcf_ant  mjcf_cassie  mjcf_humanoid  newtonsCradle  primitives  raibo2_arm  raibo_arm  rayDemo  rayDemo2  robots  sensors  speed_test  springTest  synchronousServerUpdate  trackedRobotAndTemplatedURDF  visualObjects  wheeledRobot  xmlRader
examples/examples/rsc/arm_2/urdf/: arm_2.urdf
examples/examples/rsc/arm_test/urdf/: arm_test.csv  arm_test.urdf
examples/examples/rsc/raibo2_arm/: CMakeLists.txt  package.xml
examples/examples/rsc/raibo2_arm/launch/: display.launch  gazebo.launch
examples/examples/rsc/raibo2_arm/meshes/: link2.STL  link5.STL  link6.STL
examples/examples/rsc/raibo2_arm/urdf/: raibo2_arm.csv  raibo2_arm.urdf
examples/examples/rsc/raibo_arm/urdf/: raibo_arm.urdf
examples/examples/rsc/raibo_arm_2/urdf/: raibo_arm_2.urdf
examples/examples/rsc/raibot/urdf/: raibot_simplified.urdf  raibot_simplified_manipulator.urdf
examples/src/server/: MPC.cpp  MPC.hpp  Matrix_box_test.hpp  arm_2.cpp  box_test.cpp  raibo2_arm.cpp  raibo_arm.cpp  raibo_arm_Impedance.cpp  raibo_arm_WBC.cpp  raibo_arm_WBC_2.cpp  raibo_low_level.cpp  raibo_low_level_position.cpp
policies/rough_terrain/2022-01-22-14-36-49/: Environment.hpp  mean42400.csv  var42400.csv
policies/rough_terrain/2022-01-22-14-36-49/Jan22_14-36-59/: events.out.tfevents.1642829819.jpc.3025.0
policies/rough_terrain/2022-01-28-08-06-47/: RaiboController.hpp  cfg.yaml
policies/rough_terrain/2022-03-18-18-10-35/: RaiboController.hpp  mean115400.csv  var115400.csv
raisimGymTorch/: activation.raisim
raisimGymTorch/algo/MPPI/: mppi.py
raisimGymTorch/algo/helper/: Transformer.py
raisimGymTorch/algo/ppo/: module.py  ppo.py  ppo_LSTM.py  ppo_LSTM_discrete.py  ppo_Transformer.py  ppo_encoding.py  storage.py  storage_encoding.py  storage_encoding_discrete.py
raisimGymTorch/algo/ppo2/: ppo.py
raisimGymTorch/data/Random_Object_encod_LSTM/2022-11-29-02-44-48/: cfg.yaml  full_0.pt  full_1000.pt  full_10000.pt  full_10200.pt  full_10400.pt  full_10600.pt  full_10800.pt  full_11000.pt  full_11200.pt  full_11400.pt  full_11600.pt  full_11800.pt  full_1200.pt  full_12000.pt  full_12200.pt  full_12400.pt  full_12600.pt  full_12800.pt  full_13000.pt  full_13200.pt  full_13400.pt  full_13600.pt  full_13800.pt  full_1400.pt  full_14000.pt  full_14200.pt  full_14400.pt  full_14600.pt  full_14800.pt  full_15000.pt  full_15200.pt  full_15400.pt  full_15600.pt  full_15800.pt  full_1600.pt  full_16000.pt  full_16200.pt  full_16400.pt  full_16600.pt  (+153 more)
raisimGymTorch/data/Random_Object_encod_LSTM/2022-12-02-17-33-00/: Environment.hpp  cfg.yaml  full_0.pt  full_1000.pt  full_10000.pt  full_10200.pt  full_10400.pt  full_10600.pt  full_10800.pt  full_11000.pt  full_11200.pt  full_11400.pt  full_11600.pt  full_11800.pt  full_1200.pt  full_12000.pt  full_12200.pt  full_12400.pt  full_12600.pt  full_12800.pt  full_13000.pt  full_13200.pt  full_13400.pt  full_13600.pt  full_13800.pt  full_1400.pt  full_14000.pt  full_14200.pt  full_14400.pt  full_14600.pt  full_14800.pt  full_15000.pt  full_15200.pt  full_15400.pt  full_15600.pt  full_15800.pt  full_1600.pt  full_16000.pt  full_16200.pt  full_16400.pt  (+283 more)
raisimGymTorch/env/: RaisimGymVecEnv.py  VectorizedEnvironment.hpp  debug_app.cpp  raisim_gym.cpp
raisimGymTorch/env/envs/rsg_anymal/: AnymalController.hpp  Environment.hpp  cfg.yaml  runner.py
raisimGymTorch/env/envs/rsg_hubodog/: Environment.hpp  HubodogController.hpp  cfg.yaml  runner.py
raisimGymTorch/env/envs/rsg_minicheetah/: Environment.hpp  MinicheetahController.hpp  runner.py
raisimGymTorch/env/envs/rsg_raibo_rough_terrain/: Environment.hpp  Environment_Rollout.hpp  RaiboController.hpp  RandomHeightMapGenerator.hpp  RandomObjectGenerator.hpp  binary_map.txt  cfg.yaml  check_value.ipynb  env_value.csv  estimator_helper.py  nerf.ipynb  nerf_helper.py  object_pose_data.csv  robot_pose_data.csv  runner.py  runner_LSTM.py  runner_encoding.py  (+12 more)
raisimGymTorch/helper/: raisim_gym_helper.py
raisimGymTorch/nav/: __init__.py  agent_helpers.py  estimator_helpers.py  quad_plot.py
rsc/arm_2/meshes/: link6.STL
rsc/hubodog/: hubodog.urdf
rsc/minicheetah/: mini-cheetah.urdf
rsc/raibo2_arm/urdf/: raibo2_arm.urdf
rsc/raibo_arm/urdf/: raibot_simplified.urdf
rsc/raibot/sensors/: realsense435i.xml
rsc/raibot/urdf/: raibot_sensors.urdf  raibot_simplified.urdf  raibot_simplified_sensored.urdf
rsc/raibot_sensored/meshes/: camera_mount.STL
rsc/raibot_sensored/sensors/: SimIMU.xml  realsense435i.xml
rsc/raibot_sensored/urdf/: raibot_change.urdf  raibot_sensors.urdf  raibot_simplified.urdf
(+27 files in other folders)
